--- a/TodoListe/imports/ui/pages/home/home.html
+++ b/TodoListe/imports/ui/pages/home/home.html
@@ -1,4 +1,4 @@
 <template name="App_home">
-  {{> hello}}
-  {{> info}}
+  <h1>Todoliste</h1>
+    <p>Ce site web permet la gestion de notes de façon dynamique</p>
 </template>
